--- a/contactanos.html
+++ b/contactanos.html
@@ -17,9 +17,9 @@
 
 <body>
     <ul>
-        <li><a class="active" href="main">Principal</a></li>
-        <li><a href="artista">Artistas</a></li>
-        <li><a href="discos">Discos</a></li>
+        <li><a class="active" href="index.html">Principal</a></li>
+        <li><a href="nosotros.html">Nosotros</a></li>
+        <li><a href="cart.html">Compras</a></li>
         <li><a href="registro.html">Regístrate</a></li>
         <li><a href="contactanos.html">Contáctanos</a></li>
       </ul>
