--- a/registro.html
+++ b/registro.html
@@ -7,13 +7,14 @@
     <title>Registro de Usuario</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
     <ul>
-        <li><a class="active" href="main">Principal</a></li>
-        <li><a href="artista">Artistas</a></li>
-        <li><a href="discos">Discos</a></li>
+        <li><a class="active" href="index.html">Principal</a></li>
+        <li><a href="nosotros.html">Nosotros</a></li>
+        <li><a href="cart.html">Compras</a></li>
         <li><a href="registro.html">Regístrate</a></li>
         <li><a href="contactanos.html">Contáctanos</a></li>
     </ul>
@@ -23,26 +24,26 @@
             <form id="registrationForm">
                 <div class="form-group">
                     <label for="username">Nombre de usuario</label>
-                    <input type="text" class="form-control" id="username" placeholder="Ingresa tu nombre de usuario">
+                    <input type="text" class="form-control" id="username" placeholder="Ingresa tu nombre de usuario" required>
                 </div>
                 <div class="form-group">
                     <label for="email">Correo electrónico</label>
-                    <input type="email" class="form-control" id="email" placeholder="Ingresa tu correo electrónico">
+                    <input type="email" class="form-control" id="email" placeholder="Ingresa tu correo electrónico" required>
                 </div>
                 <div class="form-group">
                     <label for="password">Contraseña</label>
-                    <input type="password" class="form-control" id="password" placeholder="Ingresa tu contraseña">
+                    <input type="password" class="form-control" id="password" placeholder="Ingresa tu contraseña" required>
                 </div>
                 <div class="form-group">
                     <label for="confirm_password">Confirmar contraseña</label>
-                    <input type="password" class="form-control" id="confirm_password" placeholder="Confirma tu contraseña">
+                    <input type="password" class="form-control" id="confirm_password" placeholder="Confirma tu contraseña" required>
                 </div>
                 <button type="button" class="btn btn-primary btn-block" id="registerBtn">Registrarse</button>
             </form>
         </div>
     </div>
 
-    <!-- Modal -->
+    <!-- Modal de Registro Exitoso -->
     <div class="modal fade" id="registrationModal" tabindex="-1" role="dialog" aria-labelledby="registrationModalLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -63,12 +64,37 @@
         </div>
     </div>
 
+    <!-- Modal de Error -->
+    <div class="modal fade" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="errorModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="errorModalLabel">Error</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Por favor, rellena todos los campos antes de continuar.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         $(document).ready(function () {
             $('#registerBtn').click(function () {
-                $('#registrationModal').modal('show');
+                if ($('#registrationForm')[0].checkValidity()) {
+                    $('#registrationModal').modal('show');
+                } else {
+                    $('#errorModal').modal('show');
+                }
             });
         });
     </script>
